# PersonalAssistant

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  debug_test.py  docker-compose.yml  pyproject.toml  requirements.txt
.clinerules/: .clinerules.md
.github/workflows/: ci.yml
backend/: __init__.py  main.py
backend/agents/: diagram.py  graph.py  state.py
backend/architecture/: __init__.py  candidates.py
backend/artifacts/: __init__.py  diagram.py  image.py  image_routing.py  storage.py  types.py
backend/capabilities/: __init__.py  visual_mcp.py
backend/cli/: __init__.py  backfill_image_embeddings.py  check_memory_operations.py  evaluate_memory_retrieval.py  evaluate_search_routing.py  generate_architecture_candidate.py  generate_encryption_key.py  issue_token.py  migrate_vector_dimension.py  purge_memory.py  reembed_memory.py  run_memory_maintenance.py  soak_memory.py  sync_mcp_tools.py
backend/config/: settings.py
backend/core/: __init__.py  auth.py  crypto.py  dependencies.py  egress.py  interfaces.py  llm.py  logging_config.py  telemetry.py
backend/database/: locks.py  session.py  types.py
backend/embeddings/: __init__.py  base.py  lm_studio.py  nomic_vision.py
backend/mcp/: client.py  config.py  inspection.py  invocation.py  retry.py  session.py  types.py
backend/memory/: __init__.py  base.py  coordinator.py  errors.py  proposals.py  repository.py  retrieval.py
backend/models/: agent_memory.py  artifact.py  conversation.py  image.py  memory.py  schemas.py  tool_memory.py  vector.py
backend/retrievers/: base.py
backend/search/: cascade.py  classifier.py  google_adk.py  hybrid.py  image_retrieval.py  mcp.py  privacy.py  query.py  quota.py  routing.py  routing_cases.py  tavily.py  types.py
backend/services/: agent_memory_manager.py  artifact_repository.py  conversation_service.py  diagram_artifact_service.py  image_artifact_service.py  impl_placeholder.py  mcp_invocation_service.py  mcp_registry_service.py  mcp_tool_orchestration_service.py  memory_maintenance_service.py  memory_operations_service.py  memory_reembedding_service.py  memory_retention_service.py  memory_retrieval_evaluator.py  postgres_memory_service.py  repository.py  search_routing_evaluator.py  tool_memory_service.py  tracing.py  vector_dimension_migration_service.py  vision_analysis_service.py
backend/tests/: conftest.py  doubles.py  test_agent_memory_api.py  (+53 more)
docs/: ARCHITECTURE.md  CHANGELOG.md  DEVELOPMENT_GUIDE.md  NEXT_SESSION.md  ROADMAP.md  SECURITY.md  architecture.html
frontend/: Dockerfile.dev  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
migrations/: env.py
(+61 files in other folders)
