[project]
name = "anios"
version = "0.1.0"
description = "AniOS - A local-first Personal AI Operating System"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.9",
    "pgvector>=0.1.0",
    "redis>=5.0.0",
    "pydantic-settings>=2.1.0",
    "langchain>=0.1.0",
    "langgraph>=0.0.30",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0.0",
]

[tool.poetry]
name = "anios"
version = "0.1.0"
description = "AniOS - A local-first Personal AI Operating System"
authors = ["Your Name <you@example.com>"]

[tool.ruff]
line-length = 88
target-version = "py312"
select = ["E", "F", "I", "B", "UP", "PT", "SIM", "N", "C90"]
ignore = []

[tool.black]
line-length = 88
target-version = ['py312']

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
files = ["backend"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"