[project]
name = "anios"
version = "0.1.0"
description = "AniOS - A local-first Personal AI Operating System"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.9",
    "asyncpg>=0.30.0",
    "pgvector>=0.1.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.1.0",
    "langgraph>=0.0.30",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "Pillow>=11.0.0",
    "python-multipart>=0.0.20",
    "numpy>=2.0.0",
    "onnxruntime>=1.20.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "mypy>=1.8.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[tool.setuptools.packages.find]
# The repo root is a flat layout holding data/, docker/, frontend/, and
# migrations/ alongside the package. Without this, setuptools auto-discovery
# finds multiple top-level packages and refuses to build, breaking
# `pip install -e ".[dev]"`.
include = ["backend*"]

[tool.ruff]
line-length = 88
target-version = "py312"
lint.select = ["E", "F", "I", "B", "UP", "PT", "SIM", "N", "C90"]
lint.ignore = []

[tool.black]
line-length = 88
target-version = ['py312']

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
files = ["backend"]
exclude = ["^backend/tests/"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
